# Gauss-Jordan

./: BasicData.txt  CMakeLists.txt  Data.txt  MatrixData.txt  example.txt  main.cpp
AllBasicSolutions/: FindAllBasicSolutions.cpp  FindAllBasicSolutions.h
Gauss/: Gauss.cpp  Gauss.h  StuffForGauss.cpp  StuffForGauss.h
Gauss/Matrix/: Matrix.cpp  Matrix.h
Gauss/SimpleFration/: SimpleFraction.cpp
MethodArtificialBasis/: ArtificialTable.cpp  ArtificialTable.h  MethodArtificialBasis.cpp  MethodArtificialBasis.h
SimplexMethod/: SimplexMethod.cpp  SimplexMethod.h  SimplexTable.cpp  SimplexTable.h
header/: FindAllBasicSolutions.h  Gauss.h  Matrix.h  SimpleFraction.h  SimplexTable.h  StuffForGauss.h
source/: FindAllBasicSolutions.cpp  Gauss.cpp  Matrix.cpp  SimpleFraction.cpp  SimplexMethod.cpp  SimplexTable.cpp  StuffForGauss.cpp  main.cpp
